--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name xn----7sbbuucbrjnm.xn--p1ai www.xn----7sbbuucbrjnm.xn--p1ai;
+    server_name parkkamnya.ru www.parkkamnya.ru;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -15,32 +15,38 @@ server {
     }
 
     location / {
-        rewrite ^ https://xn----7sbbuucbrjnm.xn--p1ai$request_uri? permanent;
+        rewrite ^ https://parkkamnya.ru$request_uri? permanent;
+    	#return 200;
     }
 
 }
 
-# server {
-#     listen 443 ssl;
-#     http2 on;
+ server {
+    listen 443 ssl;
+    http2 on;
     
-#     server_name xn--90aamrcjncbtd.xn--p1ai www.xn--90aamrcjncbtd.xn--p1ai;
+    server_name parkkamnya.ru www.parkkamnya.ru;
 
-#     ssl_certificate /etc/letsencrypt/live/xn--90aamrcjncbtd.xn--p1ai/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/xn--90aamrcjncbtd.xn--p1ai/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/parkkamnya.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/parkkamnya.ru/privkey.pem;
     
-#     location /api/ {
-#         include proxy_params;
-#         proxy_pass http://backend;
-#     }
+    location /api/ {
+        include proxy_params;
+        proxy_pass http://backend;
+    }
+    
+    location /admin/ {
+        include proxy_params;
+	proxy_pass http://backend;
+    }
 
-#    location /static {
-#        alias /static/;
-#    }
+    location /static/ {
+        alias /var/www/static/;
+    }
 
-#    location /media {
-#        alias /uploads/;
-#    }
+    location /media/ {
+        alias /var/www/media/;
+    }
 
     # location / {
     #     root /app/frontend/dist/;
@@ -54,4 +60,4 @@ server {
     #    index index.html;
     #    try_files $uri $uri/ /index.html;
     #} 
-# }
+}
