Docker and nginx for frontend

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ server {
 
 }
 
- server {
+server {
     listen 443 ssl;
     http2 on;
     
@@ -48,11 +48,11 @@ server {
         alias /var/www/media/;
     }
 
-    # location / {
-    #     root /app/frontend/dist/;
-    #     index index.html;
-    #     try_files $uri $uri/ /index.html;
-    # }
+    location / {
+        root /app/frontend/dist/;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
 
     #for tests
     #location / {
