--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -53,9 +53,12 @@ server {
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-
+    
+    location /public/ {
+	alias /app/frontend/public/;
+    }
     #for tests
-    #location / {
+   #location / {
     #    root app/frontend/;
     #    index index.html;
     #    try_files $uri $uri/ /index.html;
