--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,11 @@ services:
       - "8000:8000"
     depends_on:
       - db
+  
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
 
   nginx:
     build:
