--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     env_file:
       - .env
     # remove flag "--staging" to make real SSL (not for tests)
-    command: certonly --webroot --webroot-path=/var/www/html/ --agree-tos --email ${CERTBOT_EMAIL} -d parkkamnya.ru -d www.parkkamnya.ru
+    command: certonly --webroot --webroot-path=/var/www/html/ --agree-tos --email ${CERTBOT_EMAIL} -d palitrakamnya.ru -d www.palitrakamnya.ru
     volumes:
       - etc-letsencrypt:/etc/letsencrypt
       - www-html:/var/www/html
