--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,17 +7,17 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name parkkamnya.ru www.parkkamnya.ru;
+    server_name palitrakamnya.ru www.palitrakamnya.ru;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
         root /var/www/html;
     }
 
-    location / {
-        rewrite ^ https://parkkamnya.ru$request_uri? permanent;
-    	#return 200;
-    }
+    #location / {
+    #    rewrite ^ https://palitrakamnya.ru$request_uri? permanent;
+    #	#return 200;
+    #}
 
 }
 
@@ -25,10 +25,10 @@ server {
     listen 443 ssl;
     http2 on;
     
-    server_name parkkamnya.ru www.parkkamnya.ru;
+    server_name palitrakamnya.ru www.palitrakamnya.ru;
 
-    ssl_certificate /etc/letsencrypt/live/parkkamnya.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/parkkamnya.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/palitrakamnya.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/palitrakamnya.ru/privkey.pem;
     
     location /api/ {
         include proxy_params;
