Remove existing frontend folder to prepare for merge

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,10 +14,10 @@ server {
         root /var/www/html;
     }
 
-    #location / {
-    #    rewrite ^ https://palitrakamnya.ru$request_uri? permanent;
-    #	#return 200;
-    #}
+    location / {
+        rewrite ^ https://palitrakamnya.ru$request_uri? permanent;
+    	#return 200;
+    }
 
 }
 
@@ -53,14 +53,14 @@ server {
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-    
+   
     location /public/ {
 	alias /app/frontend/public/;
     }
-    #for tests
+   #for tests
    #location / {
-    #    root app/frontend/;
-    #    index index.html;
+   #    root app/frontend/;
+   #    index index.html;
     #    try_files $uri $uri/ /index.html;
     #} 
 }
