Heic validators update

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,8 @@ server {
     
     server_name palitrakamnya.ru www.palitrakamnya.ru;
 
+    client_max_body_size 20M;
+
     ssl_certificate /etc/letsencrypt/live/palitrakamnya.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/palitrakamnya.ru/privkey.pem;
     
